--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,88 +3,66 @@ name: Test and Publish StravaCZ
 on:
   push:
     branches: [ main ]
+    tags: ['v*.*.*']
   pull_request:
     branches: [ main ]
   release:
     types: [published]
+
+permissions:
+  contents: read
+  packages: write
 
 jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-
+        python: ['3.9', '3.10', '3.11', '3.12']
+    
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e .[dev]
-    
-    - name: Run tests with pytest
-      run: |
-        pytest -v --cov=strava_cz --cov-report=xml
-    
-    - name: Run linting
-      run: |
-        flake8 src/strava_cz --max-line-length=88
-        black --check src/strava_cz
-    
-    - name: Type checking with mypy
-      run: |
-        mypy src/strava_cz --ignore-missing-imports
+      - uses: actions/checkout@v4
+      
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python }}
+      
+      - uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ matrix.python }}-${{ hashFiles('pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-${{ matrix.python }}-
+            ${{ runner.os }}-pip-
+      
+      - run: |
+          python -m pip install --upgrade pip
+          pip install -e .[dev]
+      
+      - run: pytest -v --cov=strava_cz --cov-report=xml
+      
+      - run: flake8 src/strava_cz --max-line-length=88
+      
+      - run: black --check src/strava_cz
+      
+      - run: mypy src/strava_cz --ignore-missing-imports
 
   build:
     needs: test
+    if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
-    if: github.event_name == 'release'
     
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.11"
-    
-    - name: Install build dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install build
-    
-    - name: Build package
-      run: python -m build
-    
-    - name: Store artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: python-package-distributions
-        path: dist/
-
-  publish-to-pypi:
-    name: Publish to PyPI
-    if: github.event_name == 'release'
-    needs: build
-    runs-on: ubuntu-latest
-    environment:
-      name: pypi
-      url: https://pypi.org/p/strava-cz
-    permissions:
-      id-token: write
-
-    steps:
-    - name: Download artifacts
-      uses: actions/download-artifact@v4
-      with:
-        name: python-package-distributions
-        path: dist/
-    
-    - name: Publish to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
+      - uses: actions/checkout@v4
+      
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      
+      - run: |
+          python -m pip install --upgrade pip build twine
+          python -m build
+      
+      - run: |
+          python -m twine upload dist/* \
+            -u __token__ -p ${{ secrets.PYPI_API_TOKEN }}
