--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dev = [
     "black>=23.0.0",
     "flake8>=6.0.0",
     "mypy>=1.0.0",
+    "types-requests>=2.25.0",
 ]
 
 [project.urls]
@@ -51,7 +52,7 @@ where = ["src"]
 # Black formatter configuration
 [tool.black]
 line-length = 100
-target-version = ['py38']
+target-version = ['py39']
 
 # Pytest configuration
 [tool.pytest.ini_options]
